<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp">

    <LinearLayout
        android:id="@+id/symbolLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                android:id="@+id/symbol_title"
                style="@style/textTitles"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/base_asset"
                style="@style/textValues_alt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/quote_asset"
                style="@style/textValues_alt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />


        </LinearLayout>

        <TextView
            android:id="@+id/time"
            style="@style/textSubs_alt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/teal_200" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/open_price"
                style="@style/textValues_alt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/last_price"
                style="@style/textValues_alt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/low_price"
                style="@style/textValues_alt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/high_price"
                style="@style/textValues_alt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/bid_price"
                style="@style/textValues_alt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/ask_price"
                style="@style/textValues_alt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/volume"
                style="@style/textValues_alt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp" />

        </LinearLayout>
    </LinearLayout>

    <Button
        style="@style/buttonStyle"
        android:id="@+id/buyBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:text="@string/buy"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/symbolLayout"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        style="@style/buttonStyle"
        android:id="@+id/sellBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:text="@string/sell"
        app:layout_constraintStart_toEndOf="@+id/buyBtn"
        app:layout_constraintTop_toBottomOf="@+id/symbolLayout"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        style="@style/buttonStyle"
        android:id="@+id/bidBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:text="@string/bid"
        app:layout_constraintStart_toEndOf="@+id/sellBtn"
        app:layout_constraintTop_toBottomOf="@+id/symbolLayout"
        tools:layout_editor_absoluteX="0dp" />

    <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_margin="10dp"
        android:elevation="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bidBtn"
        card_view:cardBackgroundColor="@color/black"
        card_view:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/trends"
                style="@style/textTitles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trends" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/teal_200" />

            <TextView
                android:id="@+id/graphs_place_holder"
                style="@style/textValues"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/graphs" />

        </LinearLayout>


    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>